changes for assigning variables hardcoded in methods.